<resources>
    <string name="app_name">ute</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lblNombres">Nombres</string>
    <string name="lblApellidos">Apellidos</string>
    <string name="lblDNI">DNI</string>
    <string name="lblTelefono">Telefono</string>
    <string name="lblDireccion">Dirección</string>
    <string name="lblVoid">Base de Datos Vacia...</string>
    <string name="lblExtId">External Id</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>