<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NOMBRES: "
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nombres"
                android:text="@string/lblNombres"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/apellidos"
                android:text="@string/lblApellidos"
                android:layout_toRightOf="@+id/nombres"
                android:layout_marginLeft="10dp"
                android:textAppearance="?attr/textAppearanceBody2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DNI: "
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DNI"
                android:text="@string/lblDNI"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DIRECCION: "
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/direccion"
                android:text="@string/lblDireccion"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TELEFONO: "
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/telefono"
                android:text="@string/lblTelefono"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EXTERNAL ID: "
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/teal_700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/extId"
                android:text="@string/lblExtId"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/teal_700" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>